--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -29,7 +29,7 @@
           <div class="modal-body">
             <form>
               <div class="mb-3">
-                <label for="topic" class="col-form-label">Название:</label>
+                <label for="topic" class="col-form-label">Тема:</label>
                 <input type="text" class="form-control" id="topic" name="topic">
               </div>
                 <div class="mb-3">
